@@ -1,5 +1,7 @@
 #!/usr/bin/env python
 import sys, os, logging
+import mydbus		# May restart with newer Python
+
 import getopt		# (optparse is only in Python 2.3)
 import findrox; findrox.version(2, 0, 0)
 import rox
@@ -41,7 +43,7 @@ usage = _("Usage: ROX-Session/AppRun [OPTION]...\n"	\
        "\thttp://rox.sourceforge.net\n"					\
        "\nReport bugs to <tal197@users.sourceforge.net>.")
 
-version = _("ROX-Session 0.27\n"
+version = "ROX-Session 0.27\n" + _(
 	    "Copyright (C) 2005 Thomas Leonard.\n"
 	    "ROX-Session comes with ABSOLUTELY NO WARRANTY,\n"
 	    "to the extent permitted by law.\n"
