@@ -9,7 +9,7 @@ import dbus_compat
 sys.modules['dbus.services'] = dbus_compat
 
 try:
-	import dbus
+	import mydbus as dbus
 	if hasattr(dbus, 'version') and dbus.version >= (0, 40, 0):
 		DBusException = dbus.DBusException
 	else:
